--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="main">
         <section class="home">
             <div class="home_container">
-                <div class="row_container">
+                <div class="row_container align_center">
                     <div class="home_text">
                         <p>Hello, I'm</p>
                         <h1>Maxence Bonnici</h1>
@@ -21,7 +21,7 @@
                     </div>
                     <div class="home_img">
                         <div class="img_box">
-                            <img src="media/me0.jpg" alt="me">
+                            <img src="media/me1a.png" alt="me">
                         </div>
                     </div>
                 </div>
