--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="main">
-        <section class="home">
+        <section class="home align_center">
             <div class="home_container">
                 <div class="row_container align_center">
                     <div class="home_text">
