--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
                         <p>Hello, I'm</p>
                         <h1>Maxence Bonnici</h1>
                         <h2>Epitech Student</h2>
+                        <a href="" class="btn">About me</a>
+                        <a href="" class="btn">Portfolio</a>
                     </div>
                     <div class="home_img">
                         <div class="img_box">
