--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="main">
-        <section class="home align_center">
+        <section class="home align_center hidden">
             <div class="home_container">
                 <div class="row_container align_center">
                     <div class="home_text">
@@ -24,6 +24,46 @@
                     <div class="home_img">
                         <div class="img_box">
                             <img src="media/me1a.png" alt="me">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="about padding">
+            <div class="home_container">
+                <div class="row_container">
+                    <div class="title">
+                        <h2>About me</h2>
+                    </div>
+                </div>
+                <div class="row_container">
+                    <div class="about_img">
+                        <div class="img_box">
+                            <img src="media/about0.jpg" alt="about img">
+                        </div>
+                    </div>
+                    <div class="about_text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas atque blanditiis doloribus vitae
+                        enim asperiores nisi, voluptatem tenetur quia facilis, natus fugit quis debitis ipsam iusto
+                        doloremque libero aliquid perferendis cupiditate suscipit, illo eligendi molestias! Mollitia
+                        cumque sit, atque rem ducimus ullam quis accusantium nesciunt commodi libero perferendis,
+                        praesentium doloremque.
+                        <h3>Skills</h3>
+                        <div class="skills">
+                            <div class="skill_item">dddd</div>
+                            <div class="skill_item">dddd</div>
+                            <div class="skill_item">dddd</div>
+                            <div class="skill_item">dddd</div>
+                            <div class="skill_item">dddd</div>
+                            <div class="skill_item">dddd</div>
+                            <div class="skill_item">dddd</div>
+                            <div class="skill_item">dddd</div>
+                            <div class="skill_item">dddd</div>
+                            <div class="skill_item">dddd</div>
+                        </div>
+                        <div class="about_tabs">
+                            <button type="button" class="tabs_item" data-target="">Studies</button>
+                            <button type="button" class="tabs_item" data-target="">Experiences</button>
                         </div>
                     </div>
                 </div>
