--- a/index.html
+++ b/index.html
@@ -62,8 +62,17 @@
                             <div class="skill_item">dddd</div>
                         </div>
                         <div class="about_tabs">
-                            <button type="button" class="tabs_item" data-target="">Studies</button>
+                            <button type="button" class="tabs_item active" data-target="">Studies</button>
                             <button type="button" class="tabs_item" data-target="">Experiences</button>
+                        </div>
+                        <div class="tabs_content" id="studies">
+                            <div class="timeline">
+                                <div class="timeline_item">
+                                    <span class="date">2222 - 2222</span>
+                                    <h4>back back back back back - <span>scholl scholl scholl</span></h4>
+                                    <p></p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
