home page + about me page

--- a/index.html
+++ b/index.html
@@ -62,18 +62,61 @@
                             <div class="skill_item">dddd</div>
                         </div>
                         <div class="about_tabs">
-                            <button type="button" class="tabs_item active" data-target="">Studies</button>
-                            <button type="button" class="tabs_item" data-target="">Experiences</button>
+                            <button type="button" class="tabs_item active" data_target="#studies">Studies</button>
+                            <button type="button" class="tabs_item" data_target="#experiences">Experiences</button>
                         </div>
-                        <div class="tabs_content" id="studies">
+                        <div class="tabs_content active" id="studies">
                             <div class="timeline">
                                 <div class="timeline_item">
                                     <span class="date">2222 - 2222</span>
                                     <h4>back back back back back - <span>scholl scholl scholl</span></h4>
-                                    <p></p>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore recusandae
+                                        dolorem, voluptas unde eius ipsum!</p>
+                                </div>
+                                <div class="timeline_item">
+                                    <span class="date">2222 - 2222</span>
+                                    <h4>back back back back back - <span>scholl scholl scholl</span></h4>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore recusandae
+                                        dolorem, voluptas unde eius ipsum!</p>
+                                </div>
+                                <div class="timeline_item">
+                                    <span class="date">2222 - 2222</span>
+                                    <h4>back back back back back - <span>scholl scholl scholl</span></h4>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore recusandae
+                                        dolorem, voluptas unde eius ipsum!</p>
                                 </div>
                             </div>
                         </div>
+                        <div class="tabs_content" id="experiences">
+                            <div class="timeline">
+                                <div class="timeline_item">
+                                    <span class="date">1111 - 1111</span>
+                                    <h4>web web web - <span>google tkt</span></h4>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam doloremque nobis
+                                        non vero, nihil quae.</p>
+                                </div>
+                                <div class="timeline_item">
+                                    <span class="date">1111 - 1111</span>
+                                    <h4>web web web - <span>google tkt</span></h4>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam doloremque nobis
+                                        non vero, nihil quae.</p>
+                                </div>
+                                <div class="timeline_item">
+                                    <span class="date">1111 - 1111</span>
+                                    <h4>web web web - <span>google tkt</span></h4>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam doloremque nobis
+                                        non vero, nihil quae.</p>
+                                </div>
+                                <div class="timeline_item">
+                                    <span class="date">1111 - 1111</span>
+                                    <h4>web web web - <span>google tkt</span></h4>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam doloremque nobis
+                                        non vero, nihil quae.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <a href="" class="btn">Download CV</a>
+                        <a href="" class="btn">Contact me</a>
                     </div>
                 </div>
             </div>
