--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="main">
+    <div class="main hidden">
         <section class="home align_center hidden">
             <div class="home_container">
                 <div class="row_container align_center">
@@ -29,7 +29,7 @@
                 </div>
             </div>
         </section>
-        <section class="about padding">
+        <section class="about padding hidden">
             <div class="home_container">
                 <div class="row_container">
                     <div class="title">
@@ -121,6 +121,121 @@
                 </div>
             </div>
         </section>
+        <section class="portfolio">
+            <div class="home_container">
+                <div class="row_container">
+                    <div class="title padding">
+                        <h2>Recent work</h2>
+                    </div>
+                </div>
+                <div class="row_container">
+                    <div class="portfolio_item">
+                        <div class="portfolio_thumb">
+                            <img src="" alt="recent work 1">
+                        </div>
+                        <h3>Recent work 1</h3>
+                        <button type="button" class="btn view_proj">View project</button>
+                        <div class="detail_proj">
+                            <div class="description">
+                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum tempore, doloribus
+                                    omnis quisquam delectus porro iusto voluptatum corporis, accusantium amet possimus,
+                                    blanditiis inventore doloremque reiciendis dolorum. Est sunt totam quia ipsum quae
+                                    accusamus eaque obcaecati, quaerat, porro voluptas nostrum iusto?</p>
+                            </div>
+                            <div class="general_info">
+                                <ul>
+                                    <li>Info 1 - <span>info 1 dec</span></li>
+                                    <li>Info 1 - <span>info 1 dec</span></li>
+                                    <li>Info 1 - <span>info 1 dec</span></li>
+                                    <li>Info 1 - <span><a href="" target="_blank">google.com</a></span></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="portfolio_item">
+                        <div class="portfolio_thumb">
+                            <img src="" alt="recent work 1">
+                        </div>
+                        <h3>Recent work 1</h3>
+                        <button type="button" class="btn view_proj">View project</button>
+                        <div class="detail_proj">
+                            <div class="description">
+                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum tempore, doloribus
+                                    omnis quisquam delectus porro iusto voluptatum corporis, accusantium amet possimus,
+                                    blanditiis inventore doloremque reiciendis dolorum. Est sunt totam quia ipsum quae
+                                    accusamus eaque obcaecati, quaerat, porro voluptas nostrum iusto?</p>
+                            </div>
+                            <div class="general_info">
+                                <ul>
+                                    <li>Info 1 - <span>info 1 dec</span></li>
+                                    <li>Info 1 - <span>info 1 dec</span></li>
+                                    <li>Info 1 - <span>info 1 dec</span></li>
+                                    <li>Info 1 - <span><a href="" target="_blank">google.com</a></span></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="portfolio_item">
+                        <div class="portfolio_thumb">
+                            <img src="" alt="recent work 1">
+                        </div>
+                        <h3>Recent work 1</h3>
+                        <button type="button" class="btn view_proj">View project</button>
+                        <div class="detail_proj">
+                            <div class="description">
+                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum tempore, doloribus
+                                    omnis quisquam delectus porro iusto voluptatum corporis, accusantium amet possimus,
+                                    blanditiis inventore doloremque reiciendis dolorum. Est sunt totam quia ipsum quae
+                                    accusamus eaque obcaecati, quaerat, porro voluptas nostrum iusto?</p>
+                            </div>
+                            <div class="general_info">
+                                <ul>
+                                    <li>Info 1 - <span>info 1 dec</span></li>
+                                    <li>Info 1 - <span>info 1 dec</span></li>
+                                    <li>Info 1 - <span>info 1 dec</span></li>
+                                    <li>Info 1 - <span><a href="" target="_blank">google.com</a></span></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="portfolio_item">
+                        <div class="portfolio_thumb">
+                            <img src="" alt="recent work 1">
+                        </div>
+                        <h3>Recent work 1</h3>
+                        <button type="button" class="btn view_proj">View project</button>
+                        <div class="detail_proj">
+                            <div class="description">
+                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum tempore, doloribus
+                                    omnis quisquam delectus porro iusto voluptatum corporis, accusantium amet possimus,
+                                    blanditiis inventore doloremque reiciendis dolorum. Est sunt totam quia ipsum quae
+                                    accusamus eaque obcaecati, quaerat, porro voluptas nostrum iusto?</p>
+                            </div>
+                            <div class="general_info">
+                                <ul>
+                                    <li>Info 1 - <span>info 1 dec</span></li>
+                                    <li>Info 1 - <span>info 1 dec</span></li>
+                                    <li>Info 1 - <span>info 1 dec</span></li>
+                                    <li>Info 1 - <span><a href="" target="_blank">google.com</a></span></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+    <div class="popup">
+        <div class="pp_inner">
+            <div class="pp_content">
+                <div class="pp_header">
+                    <button type="button" class="btn pp_close">Close</button>
+                    <div class="pp_thum">
+                        <img src="media/test.jpg" alt="popup image">
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="index.js"></script>
