--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maxence Bonnici</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
     <div class="main hidden">
-        <section class="home align_center hidden">
+        <section class="home align_center">
             <div class="home_container">
                 <div class="row_container align_center">
                     <div class="home_text">
@@ -229,9 +232,26 @@
         <div class="pp_inner">
             <div class="pp_content">
                 <div class="pp_header">
-                    <button type="button" class="btn pp_close">Close</button>
+                    <button type="button" class="btn pp_close"><i class="fa-solid fa-xmark"></i></button>
                     <div class="pp_thum">
                         <img src="media/test.jpg" alt="popup image">
+                    </div>
+                    <h3>title popup test</h3>
+                </div>
+                <div class="pp_body">
+                    <div class="description">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum tempore, doloribus
+                            omnis quisquam delectus porro iusto voluptatum corporis, accusantium amet possimus,
+                            blanditiis inventore doloremque reiciendis dolorum. Est sunt totam quia ipsum quae
+                            accusamus eaque obcaecati, quaerat, porro voluptas nostrum iusto?</p>
+                    </div>
+                    <div class="general_info">
+                        <ul>
+                            <li>Info 1 - <span>info 1 dec</span></li>
+                            <li>Info 1 - <span>info 1 dec</span></li>
+                            <li>Info 1 - <span>info 1 dec</span></li>
+                            <li>Info 1 - <span><a href="" target="_blank">google.com</a></span></li>
+                        </ul>
                     </div>
                 </div>
             </div>
