--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-    <div class="main hidden">
-        <section class="home align_center">
+    <div class="main">
+        <section class="home align_center hidden">
             <div class="home_container">
                 <div class="row_container align_center">
                     <div class="home_text">
@@ -134,7 +134,7 @@
                 <div class="row_container">
                     <div class="portfolio_item">
                         <div class="portfolio_thumb">
-                            <img src="" alt="recent work 1">
+                            <img src="media/test.jpg" alt="recent work 1">
                         </div>
                         <h3>Recent work 1</h3>
                         <button type="button" class="btn view_proj">View project</button>
@@ -157,7 +157,7 @@
                     </div>
                     <div class="portfolio_item">
                         <div class="portfolio_thumb">
-                            <img src="" alt="recent work 1">
+                            <img src="media/test.jpg" alt="recent work 1">
                         </div>
                         <h3>Recent work 1</h3>
                         <button type="button" class="btn view_proj">View project</button>
@@ -180,7 +180,7 @@
                     </div>
                     <div class="portfolio_item">
                         <div class="portfolio_thumb">
-                            <img src="" alt="recent work 1">
+                            <img src="media/test.jpg" alt="recent work 1">
                         </div>
                         <h3>Recent work 1</h3>
                         <button type="button" class="btn view_proj">View project</button>
@@ -203,7 +203,7 @@
                     </div>
                     <div class="portfolio_item">
                         <div class="portfolio_thumb">
-                            <img src="" alt="recent work 1">
+                            <img src="media/test.jpg" alt="recent work 1">
                         </div>
                         <h3>Recent work 1</h3>
                         <button type="button" class="btn view_proj">View project</button>
