--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         <div class="portfolio_thumb">
                             <img src="media/test.jpg" alt="recent work 1">
                         </div>
-                        <h3>Recent work 1</h3>
+                        <h3 class="port_title">Recent work 1</h3>
                         <button type="button" class="btn view_proj">View project</button>
                         <div class="detail_proj">
                             <div class="description">
@@ -159,7 +159,7 @@
                         <div class="portfolio_thumb">
                             <img src="media/test.jpg" alt="recent work 1">
                         </div>
-                        <h3>Recent work 1</h3>
+                        <h3 class="port_title">Recent work 1</h3>
                         <button type="button" class="btn view_proj">View project</button>
                         <div class="detail_proj">
                             <div class="description">
@@ -182,7 +182,7 @@
                         <div class="portfolio_thumb">
                             <img src="media/test.jpg" alt="recent work 1">
                         </div>
-                        <h3>Recent work 1</h3>
+                        <h3 class="port_title">Recent work 1</h3>
                         <button type="button" class="btn view_proj">View project</button>
                         <div class="detail_proj">
                             <div class="description">
@@ -203,16 +203,13 @@
                     </div>
                     <div class="portfolio_item">
                         <div class="portfolio_thumb">
-                            <img src="media/test.jpg" alt="recent work 1">
+                            <img src="media/about1.jpg" alt="recent work 1">
                         </div>
-                        <h3>Recent work 1</h3>
+                        <h3 class="port_title">me test</h3>
                         <button type="button" class="btn view_proj">View project</button>
                         <div class="detail_proj">
                             <div class="description">
-                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum tempore, doloribus
-                                    omnis quisquam delectus porro iusto voluptatum corporis, accusantium amet possimus,
-                                    blanditiis inventore doloremque reiciendis dolorum. Est sunt totam quia ipsum quae
-                                    accusamus eaque obcaecati, quaerat, porro voluptas nostrum iusto?</p>
+                                <p>Loremque reit, porro voluptas nostrum iusto?</p>
                             </div>
                             <div class="general_info">
                                 <ul>
@@ -234,25 +231,11 @@
                 <div class="pp_header">
                     <button type="button" class="btn pp_close"><i class="fa-solid fa-xmark"></i></button>
                     <div class="pp_thum">
-                        <img src="media/test.jpg" alt="popup image">
+                        <img src="media/about1.jpg" alt="popup image">
                     </div>
-                    <h3>title popup test</h3>
+                    <h3></h3>
                 </div>
                 <div class="pp_body">
-                    <div class="description">
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum tempore, doloribus
-                            omnis quisquam delectus porro iusto voluptatum corporis, accusantium amet possimus,
-                            blanditiis inventore doloremque reiciendis dolorum. Est sunt totam quia ipsum quae
-                            accusamus eaque obcaecati, quaerat, porro voluptas nostrum iusto?</p>
-                    </div>
-                    <div class="general_info">
-                        <ul>
-                            <li>Info 1 - <span>info 1 dec</span></li>
-                            <li>Info 1 - <span>info 1 dec</span></li>
-                            <li>Info 1 - <span>info 1 dec</span></li>
-                            <li>Info 1 - <span><a href="" target="_blank">google.com</a></span></li>
-                        </ul>
-                    </div>
                 </div>
             </div>
         </div>
