--- a/index.html
+++ b/index.html
@@ -134,16 +134,13 @@
                 <div class="row_container">
                     <div class="portfolio_item">
                         <div class="portfolio_thumb">
-                            <img src="media/test.jpg" alt="recent work 1">
+                            <img src="media/about0.jpg" alt="recent work 1">
                         </div>
                         <h3 class="port_title">Recent work 1</h3>
                         <button type="button" class="btn view_proj">View project</button>
                         <div class="detail_proj">
                             <div class="description">
-                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum tempore, doloribus
-                                    omnis quisquam delectus porro iusto voluptatum corporis, accusantium amet possimus,
-                                    blanditiis inventore doloremque reiciendis dolorum. Est sunt totam quia ipsum quae
-                                    accusamus eaque obcaecati, quaerat, porro voluptas nostrum iusto?</p>
+                                <p>Lorem ipsum dolo</p>
                             </div>
                             <div class="general_info">
                                 <ul>
@@ -159,7 +156,7 @@
                         <div class="portfolio_thumb">
                             <img src="media/test.jpg" alt="recent work 1">
                         </div>
-                        <h3 class="port_title">Recent work 1</h3>
+                        <h3 class="port_title">Recent work 2</h3>
                         <button type="button" class="btn view_proj">View project</button>
                         <div class="detail_proj">
                             <div class="description">
@@ -170,10 +167,10 @@
                             </div>
                             <div class="general_info">
                                 <ul>
-                                    <li>Info 1 - <span>info 1 dec</span></li>
-                                    <li>Info 1 - <span>info 1 dec</span></li>
-                                    <li>Info 1 - <span>info 1 dec</span></li>
-                                    <li>Info 1 - <span><a href="" target="_blank">google.com</a></span></li>
+                                    <li>Info 2 - <span>info 1 dec</span></li>
+                                    <li>Info 2 - <span>info 1 dec</span></li>
+                                    <li>Info 2 - <span>info 1 dec</span></li>
+                                    <li>Info 2 - <span><a href="" target="_blank">google.com</a></span></li>
                                 </ul>
                             </div>
                         </div>
@@ -182,20 +179,17 @@
                         <div class="portfolio_thumb">
                             <img src="media/test.jpg" alt="recent work 1">
                         </div>
-                        <h3 class="port_title">Recent work 1</h3>
+                        <h3 class="port_title">Recent work 3</h3>
                         <button type="button" class="btn view_proj">View project</button>
                         <div class="detail_proj">
                             <div class="description">
-                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum tempore, doloribus
-                                    omnis quisquam delectus porro iusto voluptatum corporis, accusantium amet possimus,
-                                    blanditiis inventore doloremque reiciendis dolorum. Est sunt totam quia ipsum quae
-                                    accusamus eaque obcaecati, quaerat, porro voluptas nostrum iusto?</p>
+                                <p>333333333333333333333333333orro voluptas nostrum iusto?</p>
                             </div>
                             <div class="general_info">
                                 <ul>
-                                    <li>Info 1 - <span>info 1 dec</span></li>
-                                    <li>Info 1 - <span>info 1 dec</span></li>
-                                    <li>Info 1 - <span>info 1 dec</span></li>
+                                    <li>Info 3 - <span>info 1 dec</span></li>
+                                    <li>Info 3 - <span>info 1 dec</span></li>
+                                    <li>Info 3 - <span>info 1 dec</span></li>
                                     <li>Info 1 - <span><a href="" target="_blank">google.com</a></span></li>
                                 </ul>
                             </div>
@@ -213,9 +207,9 @@
                             </div>
                             <div class="general_info">
                                 <ul>
-                                    <li>Info 1 - <span>info 1 dec</span></li>
-                                    <li>Info 1 - <span>info 1 dec</span></li>
-                                    <li>Info 1 - <span>info 1 dec</span></li>
+                                    <li>Info 4 - <span>info 1 dec</span></li>
+                                    <li>Info 4 - <span>info 1 dec</span></li>
+                                    <li>Info 4 - <span>info 1 dec</span></li>
                                     <li>Info 1 - <span><a href="" target="_blank">google.com</a></span></li>
                                 </ul>
                             </div>
