contact me finish

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 </div>
             </div>
         </section>
-        <section class="portfolio">
+        <section class="portfolio padding hidden">
             <div class="home_container">
                 <div class="row_container">
                     <div class="title padding">
@@ -134,7 +134,7 @@
                 <div class="row_container">
                     <div class="portfolio_item">
                         <div class="portfolio_thumb">
-                            <img src="media/about0.jpg" alt="recent work 1">
+                            <img src="media/me1c.png" alt="recent work 1">
                         </div>
                         <h3 class="port_title">Recent work 1</h3>
                         <button type="button" class="btn view_proj">View project</button>
@@ -154,7 +154,7 @@
                     </div>
                     <div class="portfolio_item">
                         <div class="portfolio_thumb">
-                            <img src="media/test.jpg" alt="recent work 1">
+                            <img src="media/me1a.png" alt="recent work 1">
                         </div>
                         <h3 class="port_title">Recent work 2</h3>
                         <button type="button" class="btn view_proj">View project</button>
@@ -177,7 +177,7 @@
                     </div>
                     <div class="portfolio_item">
                         <div class="portfolio_thumb">
-                            <img src="media/test.jpg" alt="recent work 1">
+                            <img src="media/me1b.png" alt="recent work 1">
                         </div>
                         <h3 class="port_title">Recent work 3</h3>
                         <button type="button" class="btn view_proj">View project</button>
@@ -218,6 +218,56 @@
                 </div>
             </div>
         </section>
+        <section class="contact padding">
+            <div class="home_container">
+                <div class="row_container">
+                    <div class="title">
+                        <h2>Contact me</h2>
+                    </div>
+                </div>
+                <div class="row_container">
+                    <div class="form">
+                        <form>
+                            <div class="row_container">
+                                <div class="group">
+                                    <input type="text" placeholder="Name" class="input_control" required>
+                                </div>
+                                <div class="group">
+                                    <input type="text" placeholder="Email" class="input_control" required>
+                                </div>
+                                <div class="group">
+                                    <input type="text" placeholder="Subject" class="input_control" required>
+                                </div>
+                                <div class="group">
+                                    <textarea placeholder="Message" class="input_control"></textarea>
+                                </div>
+                                <div class="submit">
+                                    <button type="submit" class="btn">Send message</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="info">
+                        <div class="info_item">
+                            <h3>Email</h3>
+                            <p>example@gmail.com</p>
+                        </div>
+                        <div class="info_item">
+                            <h3>Phone</h3>
+                            <p>5555555555</p>
+                        </div>
+                        <div class="info_item">
+                            <h3>Follow me</h3>
+                            <div class="social">
+                                <a href="" target="_blank"><i class="fab fa-instagram"></i></a>
+                                <a href="" target="_blank"><i class="fab fa-github"></i></a>
+                                <a href="" target="_blank"><i class="fab fa-linkedin"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
     <div class="popup">
         <div class="pp_inner">
@@ -225,7 +275,7 @@
                 <div class="pp_header">
                     <button type="button" class="btn pp_close"><i class="fa-solid fa-xmark"></i></button>
                     <div class="pp_thum">
-                        <img src="media/about1.jpg" alt="popup image">
+                        <img src="" alt="popup image">
                     </div>
                     <h3></h3>
                 </div>
