--- a/index.html
+++ b/index.html
@@ -14,7 +14,26 @@
 
 <body>
     <div class="main">
-        <section class="home align_center hidden">
+        <header class="header">
+            <div class="home_container">
+                <div class="row_container flex_end">
+                    <button type="button" class="nav_toggle">
+                        <span></span>
+                    </button>
+                    <nav class="nav">
+                        <div class="nav_inner">
+                            <ul>
+                                <li><a href="" class="nav_item">Home</a></li>
+                                <li><a href="" class="nav_item">About</a></li>
+                                <li><a href="" class="nav_item">Portfolio</a></li>
+                                <li><a href="" class="nav_item">Contact</a></li>
+                            </ul>
+                        </div>
+                    </nav>
+                </div>
+            </div>
+        </header>
+        <section class="home align_center">
             <div class="home_container">
                 <div class="row_container align_center">
                     <div class="home_text">
@@ -218,7 +237,7 @@
                 </div>
             </div>
         </section>
-        <section class="contact padding">
+        <section class="contact padding hidden">
             <div class="home_container">
                 <div class="row_container">
                     <div class="title">
