--- a/index.html
+++ b/index.html
@@ -23,25 +23,25 @@
                     <nav class="nav">
                         <div class="nav_inner">
                             <ul>
-                                <li><a href="" class="nav_item">Home</a></li>
-                                <li><a href="" class="nav_item">About</a></li>
-                                <li><a href="" class="nav_item">Portfolio</a></li>
-                                <li><a href="" class="nav_item">Contact</a></li>
+                                <li><a href="#home" class="nav_item link_item">Home</a></li>
+                                <li><a href="#about" class="nav_item link_item">About</a></li>
+                                <li><a href="#portfolio" class="nav_item link_item">Portfolio</a></li>
+                                <li><a href="#contact" class="nav_item link_item">Contact</a></li>
                             </ul>
                         </div>
                     </nav>
                 </div>
             </div>
         </header>
-        <section class="home align_center">
+        <section class="home align_center active" id="home">
             <div class="home_container">
                 <div class="row_container align_center">
                     <div class="home_text">
                         <p>Hello, I'm</p>
                         <h1>Maxence Bonnici</h1>
                         <h2>Epitech Student</h2>
-                        <a href="" class="btn">About me</a>
-                        <a href="" class="btn">Portfolio</a>
+                        <a href="#about" class="btn link_item">About me</a>
+                        <a href="#portfolio" class="btn link_item">Portfolio</a>
                     </div>
                     <div class="home_img">
                         <div class="img_box">
@@ -51,7 +51,7 @@
                 </div>
             </div>
         </section>
-        <section class="about padding hidden">
+        <section class="about padding" id="about">
             <div class="home_container">
                 <div class="row_container">
                     <div class="title">
@@ -137,13 +137,13 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="" class="btn">Download CV</a>
-                        <a href="" class="btn">Contact me</a>
+                        <a href="media/cv.pdf" target="_blank" class="btn">Download CV</a>
+                        <a href="#contact" class="btn link_item">Contact me</a>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="portfolio padding hidden">
+        <section class="portfolio padding" id="portfolio">
             <div class="home_container">
                 <div class="row_container">
                     <div class="title padding">
@@ -237,7 +237,7 @@
                 </div>
             </div>
         </section>
-        <section class="contact padding hidden">
+        <section class="contact padding" id="contact">
             <div class="home_container">
                 <div class="row_container">
                     <div class="title">
